--- a/recipeIdea/templates/index.html
+++ b/recipeIdea/templates/index.html
@@ -1,52 +1,37 @@
 {% extends "base.html" %}
 
- {% block content %}
-<style>
+{% block content %}
 
-    body {
-        font-family: sans-serif;
-        font-size: 18px;
-        background-color: #fdfdfd;
-    }
-
-    .head_text{
-    color: white;
-  }
-    .card{
-    box-shadow: 0 16px 48px #E3E7EB;
-}
-</style>
-
-    <header>
-      <div class="container">
-        <div class="row">
-          <div>
-            <div class="masthead">
-              <h3>HELLO! </h3>
-              <p>Sharing recipies at Casper College! &nbsp
-              </p>
-            </div>
-          </div>
+<header>
+  <div class="container">
+    <div class="row">
+      <div>
+        <div class="masthead">
+          <h3>HELLO! </h3>
+          <p>Sharing recipies at Casper College! &nbsp
+          </p>
         </div>
       </div>
-    </header>
+    </div>
+  </div>
+</header>
 
-            <div class="container">
-                <div class="row">
+<div class="content-container">
+  <div class="content-row">
 
-              <!-- Blog Entries Column -->
-              <div class="col-md-8 mt-3 left">
-                    {% for post in post_list %}
-                <div class="card mb-4" >
-                  <div class="card-body">
-                    <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
+    <!-- Blog Entries Column -->
+    <div class="content-flex">
+      {% for post in post_list %}
+      <div class="card mb-4">
+        <div class="card-body">
+          <h2 class="card-title">{{ post.title }}</h2>
+          <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
 
-                    <p class="card-text">{{post.content|slice:":200" }}</p>
-                    <a href="{% url 'post_detail' post.slug  %}">Read More &rarr;</a>
-                  </div>
-
-                </div>
-                {% endfor %}
+          <p class="card-text">{{post.content|slice:":200" }}</p>
+          <a class="link-button" href="{% url 'post_detail' post.slug  %}">Read More &rarr;</a>
         </div>
-{%endblock%}
+
+      </div>
+      {% endfor %}
+    </div>
+    {%endblock%}
