--- a/recipeIdea/templates/index.html
+++ b/recipeIdea/templates/index.html
@@ -25,7 +25,7 @@
       <div class="card mb-4">
         <div class="card-body">
           <h2 class="card-title">{{ post.title }}</h2>
-          <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
+          <p class="card-info">{{ post.author }} | {{ post.created_on}}</p>
 
           <p class="card-text">{{post.content|slice:":200" }}</p>
           <a class="link-button" href="{% url 'post_detail' post.slug  %}">Read More &rarr;</a>
