--- a/recipeIdea/templates/post_detail.html
+++ b/recipeIdea/templates/post_detail.html
@@ -3,9 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="card-body">
-      <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
-      <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
-      <p class="card-text ">{{ object.content | safe }}</p>
+      <h1 class="card-title">{% block title %} {{ object.title }} {% endblock title %}</h1>
+      <p class="card-info">{{ post.author }} | {{ post.created_on }}</p>
+      <p class="card-text">{{ object.content | safe }}</p>
       <a class="link-button" href="{% url 'comment' post.slug %}">Leave a comment &rarr;</a>
     </div>
   </div>
