--- a/recipeIdea/templates/add.html
+++ b/recipeIdea/templates/add.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h2 style="font-family: serif; color:rgb(80, 50, 125);">Add a Recipe</h2>
-        <form id='RecipeForm' method="POST" style="margin-top: 1.3em;">
+        <form class='recipe-form' method="POST" style="margin-top: 1.3em;">
             {% csrf_token %}
             {{ recipe_form.as_p }}
             <button type="submit" class="save btn btn-default">Add</button>
