--- a/recipeIdea/templates/post_detail.html
+++ b/recipeIdea/templates/post_detail.html
@@ -5,6 +5,9 @@
     <div class="card-body">
       <h1 class="card-title">{% block title %} {{ object.title }} {% endblock title %}</h1>
       <p class="card-info">{{ post.author }} | {{ post.created_on }}</p>
+      {% if img_obj %}
+      <img class="img-food" src='{{ object.image.url }}' alt="picture of food">
+      {% endif %}
       <p class="card-text">{{ object.content | safe }}</p>
       <a class="link-button" href="{% url 'comment' post.slug %}">Leave a comment &rarr;</a>
     </div>
